--- a/index.html
+++ b/index.html
@@ -14,27 +14,27 @@
 			<img src="img/logo.png" alt="logo" style="margin-right: 10px">BRAN<span>D</span></a>
 			<div class="form dropdown">	
 				<a href="#" class="btn">Browse <img src="img/arrow.png" alt="arrow" style="margin-left: 8px"></a>
-				<div class="dropdown-menu triangle">
+				<div class="dropdown-menu triangle dropdown-styles">
 					<p class="dropdown-title">Women</p>
 					<ul class="list-dropdown-menu">
-						<li><a href="#">Dresses</a></li>
-						<li><a href="#">Tops</a></li>
-						<li><a href="#">Sweaters/Knits</a></li>
-						<li><a href="#">Jackets/Coats</a></li>
-						<li><a href="#">Blazers</a></li>
-						<li><a href="#">Denim</a></li>
-						<li><a href="#">Leggings/Pants</a></li>
-						<li><a href="#">Skirts/Shorts</a></li>
-						<li><a href="#">Accessories</a></li>
+						<li><a  class="dropdown-menu-link" href="#">Dresses</a></li>
+						<li><a  class="dropdown-menu-link" href="#">Tops</a></li>
+						<li><a  class="dropdown-menu-link" href="#">Sweaters/Knits</a></li>
+						<li><a  class="dropdown-menu-link" href="#">Jackets/Coats</a></li>
+						<li><a  class="dropdown-menu-link" href="#">Blazers</a></li>
+						<li><a  class="dropdown-menu-link" href="#">Denim</a></li>
+						<li><a  class="dropdown-menu-link" href="#">Leggings/Pants</a></li>
+						<li><a  class="dropdown-menu-link" href="#">Skirts/Shorts</a></li>
+						<li><a  class="dropdown-menu-link" href="#">Accessories</a></li>
 					</ul>
 					<p class="dropdown-title">Men</p>
 					<ul class="list-dropdown-menu">
-						<li><a href="#">Tees/Tank tops</a></li>
-						<li><a href="#">Shirts/Polos</a></li>
-						<li><a href="#">Sweaters</a></li>
-						<li><a href="#">Sweatshirts/Hoodies</a></li>
-						<li><a href="#">Blazers</a></li>
-						<li><a href="#">Jackets/vests</a></li>
+						<li><a  class="dropdown-menu-link" href="#">Tees/Tank tops</a></li>
+						<li><a  class="dropdown-menu-link" href="#">Shirts/Polos</a></li>
+						<li><a  class="dropdown-menu-link" href="#">Sweaters</a></li>
+						<li><a  class="dropdown-menu-link" href="#">Sweatshirts/Hoodies</a></li>
+						<li><a  class="dropdown-menu-link" href="#">Blazers</a></li>
+						<li><a  class="dropdown-menu-link" href="#">Jackets/vests</a></li>
 					</ul>
 				</div>
 				<input class="inpu-header" type="text" placeholder="Search for Item...">
@@ -46,7 +46,29 @@
 				<a href="#" class="btn2">My Account <img src="img/arrow-white.png" alt="arrow-white" style="margin-left: 8px"></a>	
 			</div>
 		</div>
+		<ul class=" nav flex-nav">
+			<li class="nav-items"><a class="nav-link" href="#">Home</a></li>
+			<li class="nav-items"><a class="nav-link" href="#">Man</a></li>
+			<li class="nav-items dropdown"><a class="nav-link" href="#">Women</a>
+				<div class="dropdown-menu triangle dropdown-styles-nav">
+					<p class="dropdown-title">Women</p>
+					<ul class="list-dropdown-menu">
+						<li><a  class="dropdown-menu-link" href="#">Dresses</a></li>
+						<li><a  class="dropdown-menu-link" href="#">Tops</a></li>
+						<li><a  class="dropdown-menu-link" href="#">Sweaters/Knits</a></li>
+						<li><a  class="dropdown-menu-link" href="#">Jackets/Coats</a></li>
+						<li><a  class="dropdown-menu-link" href="#">Blazers</a></li>
+						<li><a  class="dropdown-menu-link" href="#">Denim</a></li>
+						<li><a  class="dropdown-menu-link" href="#">Leggings/Pants</a></li>
+						<li><a  class="dropdown-menu-link" href="#">Skirts/Shorts</a></li>
+						<li><a  class="dropdown-menu-link" href="#">Accessories</a></li>
+					</ul>
+			</li>
+			<li class="nav-items"><a class="nav-link" href="#">Kids</a></li>
+			<li class="nav-items"><a class="nav-link" href="#">Accoseriese</a></li>
+			<li class="nav-items"><a class="nav-link" href="#">Featured</a></li>
+			<li class="nav-items"><a class="nav-link" href="#">Hot Deals</a></li>
+		</ul>
 	</header>
-
 </body>
 </html>
