--- a/index.html
+++ b/index.html
@@ -70,5 +70,36 @@
 			<li class="nav-items"><a class="nav-link" href="#">Hot Deals</a></li>
 		</ul>
 	</header>
+	<section class="slider flex-container">
+		<div class="container">
+			<h1 class="text-slider">
+				<span class="brand">THE BRAND</span> 
+				<br>OF LUXERIOUS  
+				<span class="fashion">FASHION</span>
+			</h1>
+		</div>
+	</section>
+	<section class="category container">
+		<div class="category-box">
+			<img src="img/men.png" alt="men">
+			<h2 class="category-box-title">hOT dEAL <br>
+<span class="category-box-title-red">FOR MEN</span></h2>
+		</div>
+		<div class="category-box">
+			<img src="img/wallet.png" alt="men" class="category-box-title-red">
+			<h2 class="category-box-title">LUXIROUS & trendy <br>
+<span class="category-box-title-red">ACCESORIES</span></h2>
+		</div>
+		<div class="category-box">
+			<img src="img/women.png" alt="men">
+			<h2 class="category-box-title">30% offer <br>
+<span class="category-box-title-red">women</span></h2>
+		</div>
+		<div class="category-box">
+			<img src="img/kids.png" alt="men">
+			<h2 class="category-box-title">new arrivals <br>
+<span class="category-box-title-red">FOR kids</span></h2>
+		</div>
+	</section>
 </body>
 </html>
