--- a/index.html
+++ b/index.html
@@ -101,5 +101,47 @@
 <span class="category-box-title-red">FOR kids</span></h2>
 		</div>
 	</section>
+	<section class="product container">
+		<div class="product-items">
+			<img src="img/1.png" alt="dress">
+			<p class="product-title">Mango  People  T-shirt</p>
+			<span class="product-title-red">$52.00</span>
+		</div>
+		<div class="product-items">
+			<img src="img/2.png" alt="dress">
+			<p class="product-title">Mango  People  T-shirt</p>
+			<span class="product-title-red">$52.00</span>
+		</div>
+		<div class="product-items">
+			<img src="img/3.png" alt="dress">
+			<p class="product-title">Mango  People  T-shirt</p>
+			<span class="product-title-red">$52.00</span>
+		</div>
+		<div class="product-items">
+			<img src="img/4.png" alt="dress">
+			<p class="product-title">Mango  People  T-shirt</p>
+			<span class="product-title-red">$52.00</span>
+		</div>
+		<div class="product-items">
+			<img src="img/5.png" alt="dress">
+			<p class="product-title">Mango  People  T-shirt</p>
+			<span class="product-title-red">$52.00</span>
+		</div>
+		<div class="product-items">
+			<img src="img/6.png" alt="dress">
+			<p class="product-title">Mango  People  T-shirt</p>
+			<span class="product-title-red">$52.00</span>
+		</div>
+		<div class="product-items">
+			<img src="img/7.png" alt="dress">
+			<p class="product-title">Mango  People  T-shirt</p>
+			<span class="product-title-red">$52.00</span>
+		</div>
+		<div class="product-items">
+			<img src="img/8.png" alt="dress">
+			<p class="product-title">Mango  People  T-shirt</p>
+			<span class="product-title-red">$52.00</span>
+		</div>
+	</section>
 </body>
 </html>
