--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 				<a href="#" class="btn2">My Account <img src="img/arrow-white.png" alt="arrow-white" style="margin-left: 8px"></a>	
 			</div>
 		</div>
-		<ul class=" nav flex-nav">
+		<ul class="flex-nav">
 			<li class="nav-items"><a class="nav-link" href="#">Home</a></li>
 			<li class="nav-items"><a class="nav-link" href="#">Man</a></li>
 			<li class="nav-items dropdown"><a class="nav-link" href="#">Women</a>
@@ -83,25 +83,29 @@
 		<div class="category-box">
 			<img src="img/men.png" alt="men">
 			<h2 class="category-box-title">hOT dEAL <br>
-<span class="category-box-title-red">FOR MEN</span></h2>
+			<span class="category-box-title-red">FOR MEN</span></h2>
 		</div>
 		<div class="category-box">
 			<img src="img/wallet.png" alt="men" class="category-box-title-red">
 			<h2 class="category-box-title">LUXIROUS & trendy <br>
-<span class="category-box-title-red">ACCESORIES</span></h2>
+			<span class="category-box-title-red">ACCESORIES</span></h2>
 		</div>
 		<div class="category-box">
 			<img src="img/women.png" alt="men">
 			<h2 class="category-box-title">30% offer <br>
-<span class="category-box-title-red">women</span></h2>
+			<span class="category-box-title-red">women</span></h2>
 		</div>
 		<div class="category-box">
 			<img src="img/kids.png" alt="men">
 			<h2 class="category-box-title">new arrivals <br>
-<span class="category-box-title-red">FOR kids</span></h2>
+			<span class="category-box-title-red">FOR kids</span></h2>
 		</div>
 	</section>
-	<section class="product container">
+	<section>
+		<div class="container product-header">
+			<h2 class="product-h2">Fetured Items<p class="product-p">Shop for items based on what we featured in this week</p></h2>
+		</div>
+	<div class="product container">	
 		<div class="product-items">
 			<img src="img/1.png" alt="dress">
 			<p class="product-title">Mango  People  T-shirt</p>
@@ -142,6 +146,11 @@
 			<p class="product-title">Mango  People  T-shirt</p>
 			<span class="product-title-red">$52.00</span>
 		</div>
+	</div>
+	<div class="product-btn container">
+		<a href="#" class="btn2 product-btn">My Account <img src="img/arrow-white.png" alt="arrow-white" style="margin-left: 8px"></a>	
+	</div>
+	
 	</section>
 </body>
 </html>
