--- a/index.html
+++ b/index.html
@@ -150,7 +150,25 @@
 	<div class="product-btn container">
 		<a href="#" class="btn2 product-btn">My Account <img src="img/arrow-white.png" alt="arrow-white" style="margin-left: 8px"></a>	
 	</div>
-	
+	</section>
+	<section class="feature container flex-container">
+		<img src="img/sale.png" alt="sale">
+		<p class="feature-title">30% <span class="feature-title-red">OFFER</span> <br> <span class="feature-title-formen">FOR WOMEN</span></p>
+		<div class="offer">
+			<div class="offer-items">
+				<img src="img/track.png" alt="track">
+				<h3>Free Delivery <p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p></h3>
+				
+			</div>
+			<div class="offer-items">
+				<img src="img/sale2.png" alt="track">
+				<h3>Free Delivery <p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p></h3>
+			</div>
+			<div class="offer-items">
+				<img src="img/king.png" alt="track">
+				<h3>Free Delivery <p>Worldwide delivery on all. Authorit tively morph next-generation innov tion with extensive models.</p></h3>
+			</div>
+		</div>
 	</section>
 </body>
 </html>
